--- a/css/responsive.css
+++ b/css/responsive.css
@@ -86,7 +86,7 @@ body.sensory-high-contrast {
   --color-green: #00C853;
   --color-red: #FF1744;
   --color-blue: #2979FF;
-  --color-pink: #FF4081;
+  --color-pink: #E91E90;
   --color-orange: #FF6D00;
   --color-home: #78909C;
 }
