--- a/css/tokens.css
+++ b/css/tokens.css
@@ -6,7 +6,7 @@
   --color-green: #81C784;
   --color-red: #EF9A9A;
   --color-blue: #90CAF9;
-  --color-pink: #F48FB1;
+  --color-pink: #F06292;
   --color-orange: #FFCC80;
   --color-home: #CFD8DC;
 
@@ -71,7 +71,7 @@
   --color-blue-light: #BBDEFB;
   --color-blue-dark: #42A5F5;
   --color-pink-light: #F8BBD0;
-  --color-pink-dark: #EC407A;
+  --color-pink-dark: #E91E90;
   --color-orange-light: #FFE0B2;
   --color-orange-dark: #FFA726;
   --color-home-light: #ECEFF1;
